# black-company

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: langgraph-team-sketch.md
examples/: dot-black-company-run.toml
src/black_company/: __init__.py  company_context.py  config.py  constants.py  demo.py  routing.py  state.py  voice.py  workspace_dotenv.py  workspace_projects.py  workspace_run.py
src/black_company/graph/: __init__.py  builder.py
src/black_company/growth/: __init__.py  store.py
src/black_company/integrations/: __init__.py  telegram_app.py  telegram_chat.py
src/black_company/llm/: __init__.py  deepseek_copy.py  factory.py
src/black_company/nodes/: __init__.py
src/black_company/nodes/agents/: __init__.py  designer.py  owner.py  pair.py  qa.py  user.py
src/black_company/nodes/pm/: __init__.py  orchestrate.py  types.py
src/black_company/nodes/pm/phases/: __init__.py  delivery.py  planning.py  ship.py
