[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-company"
version = "0.1.0"
description = "LangGraph PM-hub team workflow (stub agents)"
readme = "docs/langgraph-team-sketch.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.45",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.2",
]

[project.scripts]
black-company-demo = "black_company.demo:main"

[tool.setuptools.packages.find]
where = ["src"]
