[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-company"
version = "0.1.0"
description = "LangGraph PM-hub team workflow (stub agents)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.45",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.2",
]
telegram = [
    "python-telegram-bot>=21",
    "python-dotenv>=1.0",
]

[project.scripts]
black-company-demo = "black_company.demo:main"
black-company-telegram = "black_company.integrations.telegram_app:main"

[tool.setuptools.packages.find]
where = ["src"]
